prometheus/virtualservices.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: metrics-system
spec:
  hosts:
  - prometheus.mycluster.mydomain
  gateways:
  - istio-gateways/mycluster-ingress
  http:
  - route:
    - destination:
        host: prometheus-k8s
        port:
          number: 9090

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: metrics-system
spec:
  hosts:
  - grafana.mycluster.mydomain
  gateways:
  - istio-gateways/mycluster-ingress
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager-vs
  namespace: metrics-system
spec:
  hosts:
  - alertmanager.mycluster.mydomain
  gateways:
  - istio-gateways/mycluster-ingress
  http:
  - route:
    - destination:
        host: alertmanager-main
        port:
          number: 9093
